# audiodecoder.usf

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml  azure-pipelines.yml
.github/workflows/: build.yml  increment-version.yml  sync-addon-metadata-translations.yml
audiodecoder.usf/: addon.xml  addon.xml.in
audiodecoder.usf/resources/language/resource.language.ca_es/: strings.po
audiodecoder.usf/resources/language/resource.language.da_dk/: strings.po
audiodecoder.usf/resources/language/resource.language.de_de/: strings.po
audiodecoder.usf/resources/language/resource.language.en_gb/: strings.po
audiodecoder.usf/resources/language/resource.language.es_es/: strings.po
audiodecoder.usf/resources/language/resource.language.fr_fr/: strings.po
audiodecoder.usf/resources/language/resource.language.hr_hr/: strings.po
audiodecoder.usf/resources/language/resource.language.it_it/: strings.po
audiodecoder.usf/resources/language/resource.language.ko_kr/: strings.po
audiodecoder.usf/resources/language/resource.language.ru_ru/: strings.po
audiodecoder.usf/resources/language/resource.language.zh_cn/: strings.po
debian/: changelog.in  control  copyright  rules
lib/: kodi-lazyusf-note.txt  kodi-psflib-note.txt
lib/lazyusf/: CMakeLists.txt  interpreter_ops.c
lib/lazyusf/prj/msvc/: lazyusf.vcxproj  lazyusf.vcxproj.filters
lib/lazyusf/rsp/vu/: shuffle.h
lib/lazyusf/rsp_hle/: arithmetics.h
src/: USFCodec.cpp  USFCodec.h
